--- a/.github/workflows/index.yaml
+++ b/.github/workflows/index.yaml
@@ -1,1 +1,38 @@
 
+name: nodejs-installer 
+on: workflow_dispatch
+
+jobs:
+  installation: 
+    runs-on: ubuntu-latest
+    steps: 
+      - name: checkout code
+        uses: actions/checkout@v3
+      
+
+      - name: intsall node.js and npm
+        run: |
+          sudo apt-get update
+          sudo apt-get install  -y nodejs npm
+    
+      - name: check NodeJS version
+        run: |
+          node -v 
+          npm -v 
+
+     
+         
+      - name : checkout code
+        uses: actions/checkout@v3
+      - name : setup node
+        uses: actions/setup-node@v4
+        with: 
+          node-version: '18'
+
+      - name: install dependencies
+        run: |
+          npm install
+          npm innit -y 
+      
+      
+          
