--- a/.github/workflows/index.yaml
+++ b/.github/workflows/index.yaml
@@ -20,7 +20,13 @@ jobs:
           node -v 
           npm -v 
 
-     
+          echo "Se ha terminado la instalacion"
+
+
+  verification: 
+    runs-on: ubuntu-latest
+    needs: installation
+    steps:
          
       - name : checkout code
         uses: actions/checkout@v3
